修正 Symbol 页不能保存柱设置的Bug

--- a/src/exe/x64dbg_exe.vcxproj
+++ b/src/exe/x64dbg_exe.vcxproj
@@ -42,6 +42,7 @@
     <ResourceCompile Include="Strings.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\qt5_qt_namespace.natvis" />
     <None Include="..\bug.ico" />
     <None Include="manifest.xml" />
   </ItemGroup>
