--- a/src/exe/x64dbg_exe.vcxproj.filters
+++ b/src/exe/x64dbg_exe.vcxproj.filters
@@ -58,6 +58,7 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="manifest.xml" />
+    <None Include="..\..\qt5_qt_namespace.natvis" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\bug32.ico">
